updated SERP bits; URL changes: /ehr-integration/ /cloud-compliance/

--- a/source/_products/_deferred-content.html.erb
+++ b/source/_products/_deferred-content.html.erb
@@ -15,7 +15,7 @@
             </div>
             <i class="fa fa-icon fa-caret-right fa-3x callout-icon--right"></i>
         </a>
-        <a href="products/integration" title="Datica vs. other compliant platforms" class="button button--light">
+        <a href="products/ehr-integration" title="Datica vs. other compliant platforms" class="button button--light">
             <div class="callout-content--left">
                 <h4 class="headline-5">Datica vs. other compliant platforms</h4>
                 <p>Comparison of Business Associate Agreements will show that not all compliance controls are met by that provider. We are also the only HITRUST platform in healthcare.</p>
