--- a/source/cloud-compliance/index.html.slim
+++ b/source/cloud-compliance/index.html.slim
@@ -1,6 +1,6 @@
 ---
-title: "Complete Cloud Compliance"
-summary: "Datica takes on the burdens of compliance in the cloud—letting you focus on what you do best."
+title: "HIPAA-compliant cloud solutions"
+summary: "Datica compliance solutions help you pass a HITRUST assessment with HIPAA compliant cloud infrastructure, monitoring, and more."
 navTitle: "Compliance"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
@@ -136,8 +136,8 @@ section.section-article.pad-no-bottom.bg-gray-12
     .columns.small-12.large-8.text-center
       h2.headline-4 Datica Global Compliance Posture
       p.lead.text-center Datica's stringent compliance posture makes us compliant with many global standards.
-      = partial "partials/snippets/button", :locals => { :label => "Explore global compliance", :url => "/compliance/global/", :button_classes => "button hollow group", :data_track_group => "compliance", :item_id => "compliance-global", :icon => "icon-angle-right", :icon_align => "right" }
-      / a href="/compliance/global/" title="Global Compliance Table"
+      = partial "partials/snippets/button", :locals => { :label => "Explore global compliance", :url => "/cloud-compliance/global/", :button_classes => "button hollow group", :data_track_group => "compliance", :item_id => "compliance-global", :icon => "icon-angle-right", :icon_align => "right" }
+      / a href="/cloud-compliance/global/" title="Global Compliance Table"
         - preview = "https://images.ctfassets.net/189dvqdsjh46/4KtjQwGLOo6UGoAY82qe6k/dd058456a0fef3d725cd5fc8a1713840/global_compliance_stance_table.png"
         img.lozad.drop.blur-in alt="Global Compliance Table" src="#{preview}?w=1200&fm=jpg&q=5" data-src="#{preview}?w=1200&fm=png&fl=png8"
 
