--- a/source/ehr-integration/index.html.slim
+++ b/source/ehr-integration/index.html.slim
@@ -1,5 +1,5 @@
 ---
-title: "Integration"
+title: "EHR Integration Solutions"
 summary: "Datica handles the risk and complexity of EHR integrations, so you can focus on building solutions."
 navTitle: "Integration"
 author: "Datica, Inc."
