Redirect updates; mobile nav improvements; added expand param for button; visual tweaks.

--- a/source/cloud-compliance/index.html.slim
+++ b/source/cloud-compliance/index.html.slim
@@ -31,6 +31,7 @@ section#top.show-for-large.section-article.pad-no-bottom.bg-gray-3.container-ima
   .row.align-right.align-middle
     .columns.small-12.medium-6
       h1.headline-1.text-bold.text-shadow.group--2x Can your business pass a HITRUST assessment?
+      .strip-bright
       .bg-white.pad--lg.drop.pull-down
         h2.headline-3.text-bold With CCMS, the answer is yes.
         p.lead <strong>Get back to solving problems for healthcare.</strong> Let Datica take on the burden of compliance. We're the experts at understanding the exact policies and procedures required to turn HIPAA-eligible services on the public cloud into architectures that can pass a HITRUST CSF assessment. That expertise is passed on to you through our products and rock-solid BAA.
