fix bad param in CF images

--- a/source/cloud-compliance/index.html.slim
+++ b/source/cloud-compliance/index.html.slim
@@ -21,7 +21,7 @@ ruby:
 section.hide-for-large
   .row.collapse
     .columns.small-12
-      img.lozad.blur-in src="#{featured_img}?fit=thumb&w=800&h=400?q=10" data-src="#{featured_img}?fit=thumb&w=800&h=600&q=30" data-srcset="#{featured_img}?fit=thumb&w=800&h=600&q=50 800w, #{featured_img}?fit=thumb&w=1600&h=600 1200w" alt="Tech workers working on an audit"
+      img.lozad.blur-in src="#{featured_img}?fit=thumb&w=800&h=400&q=10" data-src="#{featured_img}?fit=thumb&w=800&h=600&q=30" data-srcset="#{featured_img}?fit=thumb&w=800&h=600&q=50 800w, #{featured_img}?fit=thumb&w=1600&h=600 1200w" alt="Tech workers working on an audit"
       .bg-white.pad--lg
         h2.headline-1 Can your business pass a HITRUST assessment?
         h2.headline-3.text-bold.group With CCMS, the answer is yes.
