--- a/source/cloud-compliance/index.html.slim
+++ b/source/cloud-compliance/index.html.slim
@@ -1,5 +1,5 @@
 ---
-title: "HIPAA-compliant cloud solutions"
+title: "HIPAA compliant cloud solutions"
 summary: "Datica compliance solutions help you pass a HITRUST assessment with HIPAA compliant cloud infrastructure, monitoring, and more."
 navTitle: "Compliance"
 author: "Datica, Inc."
