--- a/source/partials/snippets/_button.erb
+++ b/source/partials/snippets/_button.erb
@@ -74,10 +74,11 @@ end
 # unless defined?(tracking) || tracking == false
 track_me = ' data-track="true"'
 track_category = ' data-track-category='
-if defined?(current_page.data.collectionName) # this is already a part of static pages/sections
-    data_funnel = track_me + track_category + '"' + current_page.data.collectionName + '"'
-    section = "_" + current_page.data.collectionName
-elsif defined?(data_track_group) # data_track_group should supercede collectionName if present in the partial obj.
+# Hid the collection name part here, it's not working right and probably unneeded
+# if defined?(current_page.data.collectionName) # this is already a part of static pages/sections
+#     data_funnel = track_me + track_category + '"' + current_page.data.collectionName + '"'
+#     section = "_" + current_page.data.collectionName
+if defined?(data_track_group) # data_track_group should supercede collectionName if present in the partial obj.
     data_funnel = track_me + track_category + '"' + data_track_group + '"'
     section = "_" + data_track_group
 else # neither, it's just generic
