Ribbon image included a .png format, which isn't the typical type. MANUALLY inlining ribbon.css to reduce render blocking, until I can find a way to inject the minified css. This is fine for now.

--- a/source/assets/scss/views/ribbon.scss
+++ b/source/assets/scss/views/ribbon.scss
@@ -6,6 +6,9 @@
 @import '../mixins/colors';
 @import '../mixins/functions';
 // @import '../mixins/animation';
+
+// NOTE: experimenting with manually inlining the minified styles in the _alert-ribbon.slim. Pasting the contents of /public/css/views/ribbon.css. 
+// SO: changes made here will not automatically appear. 
 .alert-ribbon {
     height: auto;
     @include breakpoint(large) {
