--- a/source/seldon/nav.html.slim
+++ b/source/seldon/nav.html.slim
@@ -5,13 +5,59 @@ summary: "Navigation Patterns"
 author: "Datica, Inc."
 hide_from_sitemap: true
 ---
-.container-gray-2
-  = partial "partials/head/header", :locals => { :style => "light" }
+section#resources.section-article.collection.bg-gray-11
+  - nav_collection = data.site.collections.to_a.select { |id, entry | (id == "HkskHrVGykqSqOKGiqkaW") }
+  nav.nav
+    .menu-aim
+      ul.menu.horizontal.align-center.align-middle
+        - nav_collection.each do | id, nav_section |
+          - nav_section["related_entries"].each do | nav_item |
+            - unless nav_item.has_key?("show_in_top_nav") && nav_item.show_in_top_nav == false
+              li.menu-aim__item
+                a.menu-aim__item-name href = (nav_item.has_key?("section_link_uri") ? nav_item.section_link_uri : nil ) = nav_item.title_short
+                .menu-aim__item-submenu.bg-gray-3
+                  .row.align-center
+                    .columns.small-12.medium-4.pad--xl
+                      h3.headline-4 = nav_item.title
+                      p.text-small = nav_item.summary
+                      - if nav_item.has_key?("section_link_label")
+                        = current_link_to nav_item.title, nav_item.section_link_uri, title: nav_item.title, class: "link-arrow"
+                    - if nav_item.has_key?("child_data")
+                      .columns.small-12.medium-4.pad--xl
+                        ul.menu.menu-nav-list
+                          - nav_item.child_data.each do | child |
+                            - if child.nav_man == true
+                              li
+                                = current_link_to child.title, child.url, title: child.desc, class: ""
+                    .columns.small-12.medium-4.bg-gray-2.pad--xl
 
-.container-gray-12.show-for-large
-  = partial "partials/head/header", :locals => { :style => "dark" }
+  / - case_studies = data.site.collections.to_a.select { | id, cust | (id == "3N9NeiDhwcKacuIo0E4iwu") }
+  / - case_studies.each do | id, cardgroup |
+    .row.align-center
+      .columns.small-12.text-center.group
+        h2.headline-3 = cardgroup.title
+    .row.align-center.small-up-1.medium-up-2.large-up-3
+      - cardgroup["related_entries"].each do | card |
+        - carditem = data.site.caseStudy[card.id]
+        - cust = data.site.customers[carditem.customer.id]
+        .column
+          = partial "/partials/content/card-case-study",  :locals => { :cf_customer => cust } 
 
-#companyTop.show-for-large data-sticky-container="" 
+
+/           - folder = case nav_items.section
+          - when "Compliance" then "/cloud-compliance/"
+          - when "Integration" then "/ehr-integration/"
+          - when "Learn" then "/academy/"
+          - when "Company" then "/about/"
+          - when "Help" then "https://help.datica.com/hc/en-us/"
+
+/ .container-gray-2
+/   = partial "partials/head/header", :locals => { :style => "light" }
+
+/ .container-gray-12.show-for-large
+/   = partial "partials/head/header", :locals => { :style => "dark" }
+
+/ #companyTop.show-for-large data-sticky-container="" 
   nav.nav.nav-desktop.sticky.sticky-nav.container-gray-1.full-width data-options=("marginTop:0; topAnchor:companyTop") data-sticky="" data-theme="light" 
     ul.menu.horizontal.align-center.menu-secondary
       = partial "partials/snippets/nav-sub-company", :locals => { :class_li => "menu-item", :class_a => "menu-header menu-item--link" }
