--- a/source/seldon/nav.html.slim
+++ b/source/seldon/nav.html.slim
@@ -26,10 +26,30 @@ section#resources.section-article.collection.bg-gray-11
                       .columns.small-12.medium-4.pad--xl
                         ul.menu.menu-nav-list
                           - nav_item.child_data.each do | child |
-                            - if child.nav_man == true
-                              li
-                                = current_link_to child.title, child.url, title: child.desc, class: ""
-                    .columns.small-12.medium-4.bg-gray-2.pad--xl
+                            li
+                              = current_link_to child.title, child.url, title: child.desc, class: ""
+                    - if nav_item.has_key?("section_promo")
+                      - path = case nav_item.section_promo._meta.content_type_id
+                      - when "academy" then "academy"
+                      - when "blog" then "blog"
+                      - when "cta" then "cta"
+                      - when "caseStudy" then "customer"
+                      - when "events" then "event"
+                      - when "guides" then "guide"
+                      - when "pressReleases" then "press-release"
+                      - when "reports" then "innovation"
+                      - when "webinars" then "webinar"
+                      - promo_url = "/#{path}/#{nav_item.section_promo.slug}"
+                      - case nav_item.section_promo._meta.content_type_id
+                      - when "webinars"
+                        .columns.small-12.medium-4.bg-gray-2.pad--xl
+                          = partial "partials/cards/webinar-poster", :locals => { :entry => data.site.webinars[nav_item.section_promo.id] }
+                      - else
+                        .columns.small-12.medium-4.bg-gray-2.pad--xl
+                          h4.headline-5.menu-aim--promo = nav_item.section_promo.title
+                          p.text-small = nav_item.section_promo.summary
+                          = partial "partials/snippets/button", :locals => { :label => "Learn More", :url => promo_url, :button_classes => "button small success", :data_track_group => "nav", :item_id => "nav-promo-#{path}", :icon => "icon-angle-right", :icon_align => "right" }
+
 
   / - case_studies = data.site.collections.to_a.select { | id, cust | (id == "3N9NeiDhwcKacuIo0E4iwu") }
   / - case_studies.each do | id, cardgroup |
@@ -44,12 +64,6 @@ section#resources.section-article.collection.bg-gray-11
           = partial "/partials/content/card-case-study",  :locals => { :cf_customer => cust } 
 
 
-/           - folder = case nav_items.section
-          - when "Compliance" then "/cloud-compliance/"
-          - when "Integration" then "/ehr-integration/"
-          - when "Learn" then "/academy/"
-          - when "Company" then "/about/"
-          - when "Help" then "https://help.datica.com/hc/en-us/"
 
 / .container-gray-2
 /   = partial "partials/head/header", :locals => { :style => "light" }
@@ -66,3 +80,18 @@ section#resources.section-article.collection.bg-gray-11
 /   nav.sticky.sticky-nav.container-color--white.drop.text-center.full-width data-options=("marginTop:0; topAnchor:platformTop") data-sticky="" 
 /     ul.menu.horizontal.align-center
 /       = partial "products/nav-platform"
+
+/ trying to make dynamic path ugh
+                      - path = "#{nav_item.section_promo._meta.content_type_id}"
+                      - promo = data.site.path[nav_item.section_promo.id]
+
+/ mapping path list
+  - when "academy" then "academy"
+  - when "blog" then "blog"
+  - when "cta" then "cta"
+  - when "caseStudy" then "customer"
+  - when "events" then "event"
+  - when "guides" then "guide"
+  - when "pressReleases" then "press-release"
+  - when "reports" then "innovation"
+  - when "webinars" then "webinar"
